--- a/css/style.css
+++ b/css/style.css
@@ -156,11 +156,59 @@ html {
     background-color: rgba(82, 3, 23, 0.85);
   
 }
+.mouse {
+	width: 50px;
+	height: 90px;
  
+	position: relative;
+    left: 50%;
+    top: 25em;
+    z-index: 555;
+}
+.mouse::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    opacity: 1;
+    animation: wheel 2s infinite;
+    -webkit-animation: wheel 2s infinite;
+}
+.scroll-icon{
+    position: absolute;
+    font-family: Mulish;
+    color: #fff;
+    font-weight: bold;
+    right: 0;
+    left: -20px;
+    top:90px;
+    width: 100px;
+}
+
+@keyframes wheel {
+	to {
+		opacity: 0;
+		top: 60px;
+	}
+}
+
+
+@-webkit-keyframes wheel {
+	to {
+		opacity: 0;
+		top: 60px;
+	}
+}
  
  .main-title{
      position: absolute;
      left: 11%;
+     top: 40%;
  }
 .title-1{
     font-family: Bodoni;
@@ -180,7 +228,24 @@ html {
     ;
 
 }
- 
+ .hero-b-title{
+     font-family: Bodoni;
+     font-weight: bold;
+     font-size: 40px;
+     color: #d7063b;
+
+ }
+ .dis-1{
+     font-family: Mulish;
+     font-size: 17px;
+     color: #d7063b;
+ }
+ .hero-subtitle{
+    font-family: Mulish;
+    font-weight: bold;
+    font-size: 20px;
+    color: #d7063b;
+ }
  .hero-flowers-top{
     max-width: 900px;
      position: absolute;
@@ -239,8 +304,6 @@ html {
 }
 .flwr-4{
     width: 41%;
- 
- 
 }
 .glow-2{
     position: absolute;
@@ -291,6 +354,7 @@ bottom: 0;
     top: 0;
     width: 50rem;
     z-index: -2;
+    transition: 0.2s;
 }
 .flwr-5{
     width: 50rem;
@@ -298,6 +362,7 @@ bottom: 0;
     right: 10%;
     top: -3%;
     z-index: -2;
+    transition: 0.2s;
 }
 .flwr-6{
     width: 20rem;
@@ -306,6 +371,7 @@ bottom: 0;
     left: 90%;  
     top: 43%;
     z-index: -2;
+    transition: 0.2s;
 }
 .leaf-2{
     position: absolute;
@@ -313,6 +379,7 @@ bottom: 0;
     left: -33px;
     width: 13rem;
     bottom: 35rem;
+    transition: 0.2s;
 }
 .flwr-8{
     position: absolute;
@@ -320,6 +387,7 @@ bottom: 0;
     width: 30rem;
     bottom: -30px;
     left: 6%;
+    transition: 0.2s;
  
 }
 .flwr-7{
@@ -328,62 +396,58 @@ bottom: 0;
     width: 38rem;
     bottom: -158px;
     left: 62%;
+    transition: 0.2s;
  
 }
 .bottelAndDescrip-container{
     position: relative;
+    top: 0;
+ 
 }
  .bottel-container{
      position: relative;
      left: 41em;
-     top: 60px;
+ 
  }
  .wj-top{
      position: absolute;
      width: 20em;
      z-index: -1;
-     top: -8.5rem;
+     top: -2em;
+     
      
  }
  .wj-bottom{
      position: absolute;
      width: 20em;
      z-index: -2;
-     top: -6rem;
+    
 
  }
- .discription-1-div h1{
-    font-family: Bodoni;
-    font-size: 3rem;
-    Color: #d7063b;
-    text-align: left;
- }
+ 
  .title{
     font-family: Bodoni;
     font-size: 3rem;
     Color: #d7063b;
     text-align: left;
  }
+ 
  .discription-2-div{
      position: absolute;
-     left: 33%;
+     left: 39%;
+     top: 30%;
      opacity: 0;
  }
- .discription-2-div{
-    font-family: Bodoni;
-    font-size: 3rem;
-    Color: #d7063b;
-    text-align: left;
- }
- .discription-1-div p{
-    Color: #d7063b;
-    font-size: 1rem;
+ 
+ .discription-1-div{
+     position: absolute;
+     left: 39%;
+     top: 30%;
+     opacity: 1;
  }
  
- .discription-2-div p{
-    Color: #d7063b;
-    font-size: 1rem;
- }
+ 
+ 
  .btn{
      position: relative;
      z-index: 4;
@@ -392,7 +456,7 @@ bottom: 0;
  }
  .jelly-drops-container{
      position: relative;
-     top: 60px;
+     top: 150px;
  }
  .jellysAndMessages-container{
      position: relative;
@@ -401,6 +465,7 @@ bottom: 0;
  }
  .left-and-right-messages{
      position: relative;
+     top: 100px;
  }
  
  .left-description-messages{
@@ -534,7 +599,7 @@ bottom: 0;
  }
  .skin-cells-container{
      position: relative;
-     top: 100px;
+     top: 200px;
      left: 10%;
      opacity: 0;
   
@@ -603,8 +668,24 @@ bottom: 0;
  }
  #sec-3{
      width: 100%;
-     height: 100vh;
+     height: 100%;
      background-color: #f3eeea;
+ }
+ .benifits-container{
+     padding-top: 100px;
+     padding-bottom: 100px;
+ }
+ .benifet-title{
+    font-family: Bodoni;
+    font-weight: bold;
+    font-size: 40px;
+    color: #d7063b;
+ }
+ .benifet-subtitle{
+    font-family: Mulish;
+   width: 75%;
+    font-size: 20px;
+    color: #d7063b;
  }
 #sec-4{
     position: relative;
@@ -623,11 +704,13 @@ bottom: 0;
 .how-to-use{
     position: absolute;
     color: #fff;
+    font-family: Bodoni;
     font-size: 50px;
     z-index: 444;
     top: 50%;
     left: 10%;
     overflow-x: hidden;
+    font-weight: bold;
 }
 .frames{
     position: relative;
@@ -657,7 +740,7 @@ bottom: 0;
 .how-to-use-messages{
     position: relative;
     left:70%;
-    top:25%;
+    top:45%;
     width: 25%;
 }
 .step-1,
@@ -668,54 +751,245 @@ bottom: 0;
     position: absolute;
     color: #fff;
 }
-/* #sec-4::before{
-    content: "";
+.steps-title{
+    font-family: Mulish;
+    font-size: 24px;
+    font-weight: bold;
+    
+}
+.steps-des{
+    font-family: Mulish;
+    font-size: 19px;
+
+}
+.htu-link{
+    color: #fff;
+}
+.contact-container{
+    position: relative;
+    width: 100%;
+    height: 180vh;
+    background-image: url(../images/contact/Background.jpg);
+    background-size: cover;
+}
+.form{
+    position: relative;
+    top: 45em;
+    width: 56em;
+}
+.jump-start{
     position: absolute;
-    top: 0;
-    left: 0;
+    color: #fff;
+    font-family: Bodoni;
+    font-weight: bold;
+    font-size: 50px;
+    top: 200px;
+    width: 25%;
+
+}
+.contact-icon{
+    position: absolute;
+    width: 30px;
+    margin-top: 20px;
+}
+/* ------------------ */
+#sec-5{
+    height: 100vh;
+    width: 100%;
+    background-color: #f3eeea;
+}
+.swiper-container {
+    width: 100%;
+    height: 50%;
+    margin-top: 200px;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
     width: 100%;
     height: 100%;
-  
- 
- 
-} */
- 
- 
- .one{
-     height: 200vh;
- }
- .rounded-circle{
-     border-radius: 50%;
- }
- 
-.rounded-circle{
-    width: 298px;
-    height: auto;
-    position: relative;
-    left: 0px;
-    top: 25%;
-    z-index: 1;
- 
-}
-.message{
-    width: 376px;
+    object-fit: cover;
+  }
+ .arrow-pre{
+    width: 100px;
     position: absolute;
-    font-size: 17px;
-    color: white;
-    z-index: 3;
- 
-    margin-left: 38%;
+    right: 89%;
+    margin-top: 100px;
+    cursor: pointer;
+ }
+ .arrow-next{
+    width: 100px;
+    position: absolute;
+    left: 89%;
+    margin-top: 100px;
+    cursor: pointer;
    
-}
-.question{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 455px;
-}
+ }
+  .append-buttons {
+    text-align: center;
+    margin-top: 20px;
+  }
 
+  .append-buttons a {
+    display: inline-block;
+    border: 1px solid #007aff;
+    color: #007aff;
+    text-decoration: none;
+    padding: 4px 10px;
+    border-radius: 4px;
+    margin: 0 10px;
+    font-size: 13px;
+  }
+#success-message {
+    opacity: 0;
+  }
+  
+  .col-xs-12.col-sm-12.col-md-12.col-lg-12 {
+    padding: 0 20% 0 20%;
+  }
+ 
+  
+.form-label{
+   padding-top: 30px;
+   color: #e0d6ce !important;
+}
+#email::placeholder:focus{
+    
+   color: #362f2d  ;
+}
+  
+  .form-group .form-control {
+    -webkit-box-shadow: none;
+    border-bottom: 2px;
+    border-style: none none solid none;
+    border-radius:0; 
+    border-color: #e0d6ce ;
+    font-size: 25px;
+    font-family: Mulish;
+  }
+  
+  .form-group .form-control:focus {
+      box-shadow: none;
+    border-width: 0 0 3px 0;
+    border-color: #d7063b;
+    
+  }
+  
+  .form-control{
+      margin-left: 50px;
+  }
+  
+  .btn-mod.btn-large {
+      height: auto;
+      padding: 13px 52px;
+      font-size: 15px;
+  }
+  
+  .btn-mod.btn-border {
+      color: #362f2d;
+      border: 5px solid #362f2d;
+      background: transparent;
+  }
+  
+  .btn-mod, a.btn-mod {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      padding: 4px 13px;
+      color: #fff;
+      background: #362f2d;
+      border: 1px solid transparent;
+      font-size: 11px;
+      font-weight: 400;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 2px;
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      border-radius: 0;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: all 0.2s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+      -moz-transition: all 0.2s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+      -o-transition: all 0.2s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+      -ms-transition: all 0.2s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+      transition: all 0.2s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+  }
+  
+  .btn-mod.btn-border:hover, .btn-mod.btn-border:active, .btn-mod.btn-border:focus, .btn-mod.btn-border:active:focus {
+      color: #fff;
+      border-color: #362f2d;
+      background: #362f2d;
+      outline: none;
+  }
+ 
+ .check-container{
 
+    position: absolute;
+    width: 100%;
+    right: 67%;
+    margin-top: 150px;
+ }
+  .form-check-label{
+    font-size: 17px;
+    width: 173%;
+    font-family: 'Mulish';
+ 
+  }
+  .form-btn{
+    position: absolute;
+    z-index: 4;
+    width: 90px;
+    border-radius: 50px;
+    background-color: #d7063b;
+    color: #fff;
+    font-family: 'Mulish';
+    font-size: 17px;
+    width: 35%;
+    top:200%;
+
+    left: 0%;
+  }
+ .accordion-container{
+     position: relative;
+     bottom: 150px;
+ }
+ .accordion-col{
+     position: absolute;
+ }
+  @media only screen and (max-width: 500px) {
+      .btn-mod.btn-large {
+         padding: 6px 16px;
+         font-size: 11px;
+      }
+    
+      .form-title {
+          font-size: 20px;
+    }
+  }
+  
+/* -------------- */
 @media screen and (max-width : 768px){
  #sec-2{
   overflow: hidden;
@@ -732,6 +1006,5 @@ bottom: 0;
     }
     .subtitle{
         font-size: 1rem;
- 
- 
-}
+}}
+
