--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,8 @@ html {
  .berry-1{
     width: 200px;
     top: 10rem;
-     left: -10px;z-index: 3;
+     left: -10px;
+     z-index: 444;
  }
  .flwr-1{
      width: 50rem;
@@ -290,11 +291,10 @@ html {
 
 .glow-1{
     width: 38%;
-
     left: 0px;
+    height: 182%;
     position: absolute;
-    /* top: -44px; */
-    bottom: 172px;
+    bottom: 46px;
     z-index: -1;
 }
 .sparkle-4{
@@ -310,9 +310,9 @@ html {
 }
 .glow-2{
     position: absolute;
-    left: -28px;
+    left: -150px;
     width: 105%;
-    bottom: 0;
+    bottom: -20px;
     z-index: -1;
 }
 .sparkle-3{
@@ -827,7 +827,7 @@ bottom: 0;
     align-items: center;
   }
 
-  .swiper-slide img {
+  .image-of-vedio {
     display: block;
     width: 100%;
     height: 100%;
@@ -984,6 +984,39 @@ bottom: 0;
  .gif-icon{
      width: 400px;
  }
+ .slider2{
+     margin-top: 0px;
+     padding-top: 0px;
+     height: 100vh;
+     width: 100%;
+
+ }
+ .other-product{
+     width: 200px;
+ 
+ }
+ .red-product{
+     height: 269px;
+     object-fit: contain ;
+ 
+ }
+ .buy-now-btn{
+     background-color: #d7063b;
+     color: #fff;
+     width: 100px;
+     height: auto;
+     border-radius: 50px;
+ }
+ .u-may-also-title{
+    position: relative;
+    top: 100px;
+     color: #d7063b;
+     font-family: Bodoni;
+     font-size: 40px;
+     font-weight: bold;
+     z-index: 5;
+ }
+ 
   @media only screen and (max-width: 500px) {
       .btn-mod.btn-large {
          padding: 6px 16px;
