--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ h1 {
   margin-top: 200px;
 }
 .placeholder-title-1 {
+  position: relative;
+  bottom: 30px;
   font-size: 25pt;
   font: 50pt;
   color: #d7063b;
@@ -72,6 +74,7 @@ h1 {
 }
 .placeholder-title-2 {
   position: relative;
+  bottom: 30px;
   z-index: 1;
   font-size: 69pt;
   font: 50pt;
@@ -80,7 +83,7 @@ h1 {
 .placeholder-flower-1 {
   position: relative;
   left: 10rem;
-  top: -50px;
+  top: -80px;
   max-width: 300px;
 }
 .placeholder-flower-2 {
@@ -98,9 +101,9 @@ h1 {
     position: absolute;
     left: -37px;
     top: -15px;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 600;
-    font-family: sans-serif;
+    font-family: Mulish;
     color: #d7063b;
     
 }
@@ -128,7 +131,7 @@ h1 {
 
 .loader {
   position: absolute;
-  top: 50%;
+  top: 57%;
   left: 48%;
   transform: translate(-50%, -50%);
   transition: 0.4s;
@@ -138,9 +141,9 @@ h1 {
   position: absolute;
   top: -35px;
   left: 101%;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 600;
-  font-family: sans-serif;
+  font-family: Mulish;
   color: #d7063b;
   margin: 20px auto;
   text-align: center;
@@ -149,7 +152,7 @@ h1 {
 .loader .loader_bar {
   position: relative;
   width: 600px;
-  height: 2px;
+  height: 1px;
   background: #edeef7;
   border-radius: 50px;
 }
@@ -209,7 +212,7 @@ h1 {
   content: "";
   position: absolute;
   height: 100%;
-  width: inherit;
+  width: 100%;
   background-image: url(../images/hearo2/Red\ Glow\ 1.png),
   url(../images/hearo2/White\ Glow\ 1.png),
   url(../images/hearo2/White\ Glow\ 2.png),
@@ -226,7 +229,12 @@ z-index: -20;
   background-color: rgba(82, 3, 23, 0.85);
 }
 .btn{
-    width: 100px;
+    width: 170px;
+    font-size: 11px;
+    padding: 5px;
+    font-family: Mulish;
+    font-weight: bold;
+    color: #ffff;
   
 }
 .scrolling-dot {
@@ -328,6 +336,7 @@ z-index: -20;
 }
 .sparkle-1 {
   left: 30rem;
+  width: 30%;
 }
 
 .bottom-flowers {
@@ -343,18 +352,19 @@ z-index: -20;
 .glow-1 {
   width: 38%;
   left: 0px;
-  height: 182%;
+  height: 195%;
   position: absolute;
-  bottom: 46px;
+  bottom: 56px;
   z-index: -1;
 }
 .sparkle-4 {
   position: absolute;
   width: 20%;
-  top: -381px;
+  top: -361px;
+ 
 }
 .flwr-4 {
-  width: 41%;
+  width: 30%;
   max-width: 500px;
   max-height: 500px;
 }
@@ -367,9 +377,9 @@ z-index: -20;
 }
 .sparkle-3 {
   position: absolute;
-  width: 50%;
+  width: 30%;
   bottom: 0;
-  left: 20rem;
+  left: 30rem;
 }
 .flwr-3 {
   width: 30%;
@@ -431,7 +441,7 @@ z-index: -20;
   position: absolute;
   z-index: -2;
   width: 30rem;
-  bottom: -30px;
+  bottom: -10px;
   left: 6%;
 }
 .flwr-7 {
@@ -473,14 +483,14 @@ z-index: -20;
 
 .discription-2-div {
   position: absolute;
-  left: 39%;
+  left: 42%;
   top: 0%;
   opacity: 0;
 }
 
 .discription-1-div {
   position: absolute;
-  left: 39%;
+  left: 42%;
   top: 30%;
   opacity: 1;
   z-index: 9999 !important;
@@ -497,7 +507,22 @@ z-index: -20;
 .products-description h5{
  padding-top: 10px;
 }
- 
+.u-may-text-1{
+  font-family: Mulish;
+  font-weight: bold;
+  color: #362f2d;
+  font-size:17px;
+}
+.u-may-text-2{
+  font-family: Mulish;
+  font-size:17px;
+  color: #362f2d;
+}
+.u-may-text-3{
+  font-family: Mulish;
+  font-size:15px;
+  color: #362f2d;
+}
 .renwal-product{
   margin-top: 6px;
 }
@@ -1087,6 +1112,7 @@ a.btn-mod {
   object-fit: contain;
 }
 .buy-now-btn {
+  margin-top: 20px;
   background-color: #d7063b;
   color: #fff;
   width: 100px;
@@ -1104,8 +1130,8 @@ a.btn-mod {
 }
 .they-using-it-title {
   position: absolute;
-  margin-left: 200px;
-  margin-top: 100px;
+  left: 50%;
+  transform: translate(-50%, 150%);
   color: #d7063b;
   font-family: Bodoni;
   font-size: 40px;
