--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ h1 {
   margin-top: 200px;
 }
 #loader-container{
+  top: 50px;
   position: relative;
 }
 .placeholder-title-1 {
@@ -1356,7 +1357,9 @@ footer {
 }
 @media screen and (max-width: 480px) {
   
- 
+  .placeholder-row{
+    margin-top: 130px;
+  }
   #mobile-nav {
     display: block;
     position: fixed;
@@ -1369,13 +1372,16 @@ footer {
   .loader_bar{
     left: 0;
   }
+  .placeholder-title-container{
+    transform: translate(8px, -28px);
+  }
   .placeholder-title-1{
-    font-size: 10px;
+    font-size: 15px;
     top: -20px;
   }
   .placeholder-title-2{
 
-    font-size: 28px;
+    font-size: 34px;
   }
   .loader-page-container{
     padding-top: 150px;
