--- a/css/style.css
+++ b/css/style.css
@@ -1500,7 +1500,8 @@ footer {
   .slider-link {
     color: #d7063b;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
+    line-height: 3;
     font-family: Mulish;
   }
   .slider-link::after{
