--- a/css/style.css
+++ b/css/style.css
@@ -1012,7 +1012,7 @@ z-index: -20;
   border-color: #d7063b;
 }
 #name:valid,
-#last-name,
+#last-name:valid,
 #conatct:valid,
 #email:valid{
     box-shadow: none;
