--- a/css/style.css
+++ b/css/style.css
@@ -1150,7 +1150,7 @@ a.btn-mod {
 }
 .u-may-also-title {
   position: relative;
-  top: 100px;
+  top: 60px;
   color: #d7063b;
   font-family: Bodoni;
   font-size: 40px;
@@ -1246,7 +1246,15 @@ footer {
     font-size: 20px;
   }
 }
-
+ 
+@media only screen and (min-width: 500px) and (max-width: 1370px )  and (max-height:735px){
+  .title-1{
+    font-size: 9rem !important;
+  }
+  .wj-bottom, .wj-top {
+  width: 21em;
+  }
+}
 .section-faq-container {
   padding: 48px;
 }
