--- a/css/style.css
+++ b/css/style.css
@@ -240,8 +240,8 @@ z-index: -20;
   background-color: rgba(82, 3, 23, 0.85);
 }
 .btn{
-    width: 170px;
-    font-size: 11px;
+  width: 123px !important;
+    font-size: 15px;
     padding: 5px;
     font-family: Mulish;
     font-weight: bold;
